# unir-ia-va

./: .gitignore  README.md
act1-va/: T6_Ecualización_del_histograma.ipynb  _patch_notebook.py  _read_nb.py  _read_ref.py  _regenerate_report_figures.py  lab.ipynb  lab.py  muinar03_act1.docx  pyproject.toml
act1-va/doc/: main.tex  rho.bib
